@@ -98,30 +98,6 @@ static APR_OPTIONAL_FN_TYPE(ap_register_include_handler) *ssi_pfn_register;
 
 #define BYTE_COUNT_THRESHOLD AP_MIN_BYTES_TO_WRITE
 
-/* This function is used to split the brigade at the beginning of
- *   the tag and forward the pretag buckets before any substitution
- *   work is performed on the tag. This maintains proper ordering.
- */
-static int split_and_pass_pretag_buckets(apr_bucket_brigade **brgd, 
-                                         include_ctx_t *cntxt, 
-                                         ap_filter_t *next)
-{
-    apr_bucket_brigade *tag_plus;
-    int rv;
-
-    if ((APR_BRIGADE_EMPTY(cntxt->ssi_tag_brigade)) &&
-        (cntxt->head_start_bucket != NULL)) {
-        tag_plus = apr_brigade_split(*brgd, cntxt->head_start_bucket);
-        rv = ap_pass_brigade(next, *brgd);
-        cntxt->bytes_parsed = 0;
-        *brgd = tag_plus;
-        if (rv != APR_SUCCESS) {
-            return rv;
-        }
-    }
-    return APR_SUCCESS;
-}
-
 /* ------------------------ Environment function -------------------------- */
 
 /* XXX: could use ap_table_overlap here */
@@ -881,10 +857,11 @@ static int handle_include(include_ctx_t *ctx, apr_bucket_brigade **bb, request_r
 
                 if (!error_fmt) {
                     int rv;
+                    apr_status_t rc = APR_SUCCESS;
 
-                    rv = split_and_pass_pretag_buckets(bb, ctx, f->next);
-                    if (rv != APR_SUCCESS) {
-                        return rv;
+                    SPLIT_AND_PASS_PRETAG_BUCKETS(*bb, ctx, f->next, rc);
+                    if (rc != APR_SUCCESS) {
+                        return rc;
                     }
                     
                     if ((rv = ap_run_sub_req(rr))) {
@@ -2369,7 +2346,7 @@ static apr_status_t send_parsed_content(apr_bucket_brigade **bb,
     apr_bucket *dptr = APR_BRIGADE_FIRST(*bb);
     apr_bucket *tmp_dptr;
     apr_bucket_brigade *tag_and_after;
-    apr_status_t rv;
+    apr_status_t rv = APR_SUCCESS;
 
     if (r->args) {              /* add QUERY stuff to env cause it ain't yet */
         char *arg_copy = apr_pstrdup(r->pool, r->args);
@@ -2462,7 +2439,7 @@ static apr_status_t send_parsed_content(apr_bucket_brigade **bb,
                     *bb = tag_and_after;
                 }
                 else if (ctx->bytes_parsed >= BYTE_COUNT_THRESHOLD) {
-                    rv = split_and_pass_pretag_buckets(bb, ctx, f->next);
+                    SPLIT_AND_PASS_PRETAG_BUCKETS(*bb, ctx, f->next, rv);
                     if (rv != APR_SUCCESS) {
                         return rv;
                     }
